# AI_Agent_Internship_Search

./: .env.example  .gitignore  CODEMAP.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
config/: build_windows_app.ps1  register_scheduled_tasks.ps1  run_company_discovery.ps1  run_review_ui.ps1  run_scheduled_collection.ps1  run_weekly_email.ps1  settings.example.toml  verify_automation.ps1  windows_app_entry.py  windows_task_scheduler.example.ps1
data/: README.md
private/: README.md
spec/completed_tasks/: 001-private-input-loader.md  002-company-source-registry.md  003-first-job-collector.md  004-summer-2027-filter.md  005-results-review-report.md  006-ai-fit-scoring.md  007-new-posting-detection.md  008-weekly-email-summary.md  009-scheduled-collection.md  010-company-discovery.md  011-local-review-ui.md  (+33 more)
tests/: test_activity_filtering.py  test_ai_scoring.py  test_attachments.py  test_automation_scripts.py  test_career_collectors.py  test_cli.py  test_company_discovery.py  test_company_discovery_internet.py  test_email_delivery.py  test_email_summary.py  test_fit_scoring.py  test_internet_search.py  test_internship_listing.py  test_job_board_listings.py  test_job_board_search.py  test_job_collector.py  test_location_filter.py  test_monitored_companies.py  test_posting_filter.py  test_posting_history.py  test_posting_metadata.py  test_posting_summaries.py  test_private_inputs.py  test_registry_enrichment.py  test_resume_scoring.py  test_retry.py  test_review_report.py  test_review_ui.py  test_scheduled_collection.py  test_source_registry.py
(+44 files in other folders)
