[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-internship-search"
version = "0.1.0"
description = "AI-assisted internship search tool for user-configured internship roles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
internship-search = "internship_search.cli:main"

[project.optional-dependencies]
test = ["pytest"]
app = ["pyinstaller>=6.21.0"]
build = ["build>=1.2"]
dev = [
    "build>=1.2",
    "pyinstaller>=6.21.0",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
